--- a/cmd/mainapp/sampleclient.html
+++ b/cmd/mainapp/sampleclient.html
@@ -6,38 +6,61 @@
     <title>My Website</title>
   </head>
   <body>
-    <h1>Welcome to the Test client</h1>
+    <h1>Welcome to the Test client v2</h1>
       <p id="access-token"></p>
       <p id="refresh-token"></p>
       <label>GUID: </label><input id="guid" type="text">
       <label>Email: </label><input id="email" type="text">
       <button onclick="accessButtonClick()">Access</button>
       <button onclick="refreshButtonClick()">Refresh</button>
+      <p>Output</p>
+      <p id="response-output"></p>
     </form>
   </body>
   <script>
     let refreshToken = ""
     let accessToken = ""
 
-    function updateText() {
-      document.getElementById("access-token").textContent = "Access Token: " + accessToken
-      document.getElementById("refresh-token").textContent = "Refresh Token: " + accessToken
+    function updateText(text) {
+      // document.getElementById("access-token").textContent = "Access Token: " + accessToken
+      // document.getElementById("refresh-token").textContent = "Refresh Token: " + accessToken
+      document.getElementById("response-output").textContent = text
     }
 
     async function accessButtonClick() {
       const guid = document.getElementById("guid").textContent
       const email = document.getElementById("email").textContent
-      response = await ("/api/access", {
+      response = await fetch("/api/access", {
         method: "POST",
         body: JSON.stringify({
           guid: guid,
           email: email
         })
       })
-      json = await response.json
-      refreshToken = json["refresh_token"]
-      accessToken = json["access_token"]
-      updateText()
+      if (response.ok) {
+        const json = await response.json()
+        refreshToken = json["refresh_token"]
+        updateText(JSON.stringify(json))
+      } else {
+        const text = await response.text()
+        updateText(text)
+      }
+    }
+
+    async function refreshButtonClick() {
+      response = await fetch("/api/refresh", {
+        method: "POST",
+        body: JSON.stringify({
+          refresh_token: refreshToken
+        })
+      })
+      if (response.ok) {
+        const json = await response.json()
+        updateText(JSON.stringify(json))
+      } else {
+        const text = await response.text()
+        updateText(text)
+      }
     }
   </script>
 </html>
